# maya-usd-author

./: .gitignore  README.md  pyproject.toml
install/: install.py  shelf_button.py  userSetup_example.py
scripts/: __init__.py
scripts/maya_usd_editor/: __init__.py  constants.py  qt_compat.py  style.py  usdPrimEditorUI.py  usdTreeModel.py
scripts/maya_usd_editor/widgets/: __init__.py  attribute_editor.py  payload_controls.py  time_samples_editor.py  variant_editor.py
scripts/usdViewerChanger/: __init__.py  config.py
scripts/usdViewerChanger/controllers/: __init__.py  prim_controller.py  ui_controller.py
scripts/usdViewerChanger/models/: __init__.py  prim_model.py  tree_model.py
scripts/usdViewerChanger/utils/: __init__.py  usd_utils.py
scripts/usdViewerChanger/views/: __init__.py  main_window.py  property_editor.py  stage_text_editor.py  tree_view.py
scripts/usdViewerChanger/views/viewers/: __init__.py  placeholder.py
tests/: test_usdUtils.py
